chore: lower Java requirement from 25 to 17
- pom.xml: maven.compiler.release 25 → 17
- All 5 CI workflows: java-version '25' → '17', step names updated
- Replace List.getFirst() (Java 21 SequencedCollection API) with
  List.get(0) in DemoClientMain, AckTrackerTest, ServerConfigLoaderTest,
  DemoClientSwarmTest, PrometheusMetricsParserTest,
  DemoLauncherActionDelegateTest
- Sync child module parent versions (1.0.1 → 1.0.8-SNAPSHOT)
- Fix release workflow: remove -N from versions:set so child POMs are
  updated too; stage all three pom.xml files; drop missing 'dependencies'
  label from gh pr create
- README: update Java badge to Java 17

All 114 tests pass under Java 17.